--- a/index.html
+++ b/index.html
@@ -35,17 +35,21 @@
           <li>
             <span> 01 </span>
             <span
-              ><a href="destination.html" target="_parent">Destination</a></span
+              ><a href="html/destination.html" target="_parent"
+                >Destination</a
+              ></span
             >
           </li>
           <li>
             <span> 02 </span>
-            <span><a href="crew.html" target="_parent">Crew</a></span>
+            <span><a href="html/crew.html" target="_parent">Crew</a></span>
           </li>
           <li>
             <span> 03 </span>
             <span
-              ><a href="technology.html" target="_parent">Technology</a></span
+              ><a href="html/technology.html" target="_parent"
+                >Technology</a
+              ></span
             >
           </li>
         </ul>
