--- a/index.html
+++ b/index.html
@@ -30,27 +30,19 @@
           </li>
           <li>
             <span> 00 </span>
-            <span><a href="index.html" target="_parent">Home</a></span>
+            <span><a href="index.html">Home</a></span>
           </li>
           <li>
             <span> 01 </span>
-            <span
-              ><a href="html/destination.html" target="_parent"
-                >Destination</a
-              ></span
-            >
+            <span><a href="html/destination.html">Destination</a></span>
           </li>
           <li>
             <span> 02 </span>
-            <span><a href="html/crew.html" target="_parent">Crew</a></span>
+            <span><a href="html/crew.html">Crew</a></span>
           </li>
           <li>
             <span> 03 </span>
-            <span
-              ><a href="html/technology.html" target="_parent"
-                >Technology</a
-              ></span
-            >
+            <span><a href="html/technology.html">Technology</a></span>
           </li>
         </ul>
       </header>
