--- a/html/crew.html
+++ b/html/crew.html
@@ -31,23 +31,19 @@
           </li>
           <li>
             <span> 00 </span>
-            <span><a href="index.html" target="_parent">Home</a></span>
+            <span><a href="index.html">Home</a></span>
           </li>
           <li>
             <span> 01 </span>
-            <span
-              ><a href="destination.html" target="_parent">Destination</a></span
-            >
+            <span><a href="destination.html">Destination</a></span>
           </li>
           <li>
             <span> 02 </span>
-            <span><a href="crew.html" target="_parent">Crew</a></span>
+            <span><a href="crew.html">Crew</a></span>
           </li>
           <li>
             <span> 03 </span>
-            <span
-              ><a href="technology.html" target="_parent">Technology</a></span
-            >
+            <span><a href="technology.html">Technology</a></span>
           </li>
         </ul>
       </header>
