--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
           </li>
           <li>
             <span> 01 </span>
-            <span><a href="html/destination.html">Destination</a></span>
+            <span><a href="destination.html">Destination</a></span>
           </li>
           <li>
             <span> 02 </span>
