--- a/html/index.html
+++ b/html/index.html
@@ -38,11 +38,11 @@
           </li>
           <li>
             <span> 02 </span>
-            <span><a href="html/crew.html">Crew</a></span>
+            <span><a href="crew.html">Crew</a></span>
           </li>
           <li>
             <span> 03 </span>
-            <span><a href="html/technology.html">Technology</a></span>
+            <span><a href="technology.html">Technology</a></span>
           </li>
         </ul>
       </header>
