--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
           </li>
           <li>
             <span> 01 </span>
-            <span><a href="destination.html">Destination</a></span>
+            <span><a href="html/destination.html">Destination</a></span>
           </li>
           <li>
             <span> 02 </span>
-            <span><a href="crew.html">Crew</a></span>
+            <span><a href="html/crew.html">Crew</a></span>
           </li>
           <li>
             <span> 03 </span>
-            <span><a href="technology.html">Technology</a></span>
+            <span><a href="html/technology.html">Technology</a></span>
           </li>
         </ul>
       </header>
