--- a/html/destination.html
+++ b/html/destination.html
@@ -17,7 +17,7 @@
     <div class="destination">
       <header>
         <div class="logo">
-          <a href="index.html">
+          <a href="/space-tourism-website-main/index.html">
             <img src="/assets/shared/logo.svg" alt="" />
           </a>
           <span class="burger" id="burger"
