--- a/html/crew.html
+++ b/html/crew.html
@@ -31,7 +31,7 @@
           </li>
           <li>
             <span> 00 </span>
-            <span><a href="index.html">Home</a></span>
+            <span><a href="../index.html" target="_self">Home</a></span>
           </li>
           <li>
             <span> 01 </span>
