--- a/html/destination.html
+++ b/html/destination.html
@@ -47,6 +47,42 @@
           </li>
         </ul>
       </header>
+      <h2 class="head"><span>01</span> Pick your destination</h2>
+      <section>
+        <div class="destination-img">
+          <img
+            src="/assets/destination/image-moon.webp"
+            class="image"
+            id="image"
+            alt=""
+          />
+        </div>
+        <div class="destination-text">
+          <div class="select">
+            <span class="btn" id="btn1"> Moon</span>
+            <span class="btn" id="btn2"> Mars</span>
+            <span class="btn" id="btn3"> Europa</span>
+            <span class="btn" id="btn4"> Titan</span>
+          </div>
+          <h1 class="name" id="name">Moon</h1>
+          <p class="info" id="info">
+            See our planet as you’ve never seen it before. A perfect relaxing
+            trip away to help regain perspective and come back refreshed. While
+            you’re there, take in some history by visiting the Luna 2 and Apollo
+            11 landing sites.
+          </p>
+          <aside>
+            <div class="distance">
+              <h4>Avg. distance</h4>
+              <h3 class="dist" id="dist">384,400 km</h3>
+            </div>
+            <div class="time">
+              <h4>Est. travel time</h4>
+              <h3 class="day" id="day">3 days</h3>
+            </div>
+          </aside>
+        </div>
+      </section>
     </div>
     <script src="/assets/js/destination.js"></script>
   </body>
