--- a/index.html
+++ b/index.html
@@ -30,19 +30,21 @@
           </li>
           <li>
             <span> 00 </span>
-            <span><a href="index.html">Home</a></span>
+            <span><a href="index.html" id="link">Home</a></span>
           </li>
           <li>
             <span> 01 </span>
-            <span><a href="html/destination.html">Destination</a></span>
+            <span
+              ><a href="html/destination.html" id="link">Destination</a></span
+            >
           </li>
           <li>
             <span> 02 </span>
-            <span><a href="html/crew.html">Crew</a></span>
+            <span><a href="html/crew.html" id="link">Crew</a></span>
           </li>
           <li>
             <span> 03 </span>
-            <span><a href="html/technology.html">Technology</a></span>
+            <span><a href="html/technology.html" id="link">Technology</a></span>
           </li>
         </ul>
       </header>
