--- a/html/crew.html
+++ b/html/crew.html
@@ -47,6 +47,31 @@
           </li>
         </ul>
       </header>
+      <h4 class="head">02 Meet your crew</h4>
+      <section>
+        <div class="crew-text">
+          <h2 class="role" id="role">Commander</h2>
+          <h1 class="name" id="name">Douglas Hurley</h1>
+          <p class="info" id="info">
+            Douglas Gerald Hurley is an American engineer, former Marine Corps
+            pilot and former NASA astronaut. He launched into space for the
+            third time as commander of Crew Dragon Demo-2.
+          </p>
+          <div class="btns" id="btns">
+            <div class="btn" id="btn1"></div>
+            <div class="btn" id="btn2"></div>
+            <div class="btn" id="btn3"></div>
+            <div class="btn" id="btn4"></div>
+          </div>
+        </div>
+        <div class="crew-image">
+          <img
+            src="/assets/crew/image-douglas-hurley.png"
+            alt="image-douglas-hurley"
+            id="image"
+          />
+        </div>
+      </section>
     </div>
     <script src="/assets/js/crew.js"></script>
   </body>
