--- a/html/destination.html
+++ b/html/destination.html
@@ -58,7 +58,7 @@
           />
         </div>
         <div class="destination-text">
-          <div class="select">
+          <div class="select" id="select">
             <span class="btn" id="btn1"> Moon</span>
             <span class="btn" id="btn2"> Mars</span>
             <span class="btn" id="btn3"> Europa</span>
