--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="home-explore">
           <div class="circle">
-            <h2>Explore</h2>
+            <a href="/html/destination.html"> <h2>Explore</h2></a>
           </div>
         </div>
       </section>
