--- a/html/crew.html
+++ b/html/crew.html
@@ -39,7 +39,7 @@
           </li>
           <li>
             <span> 02 </span>
-            <span><a href="crew.html">Crew</a></span>
+            <span><a href="crew.html" class="link">Crew</a></span>
           </li>
           <li>
             <span> 03 </span>
