--- a/html/technology.html
+++ b/html/technology.html
@@ -43,7 +43,7 @@
           </li>
           <li>
             <span> 03 </span>
-            <span><a href="technology.html">Technology</a></span>
+            <span><a href="technology.html" class="link">Technology</a></span>
           </li>
         </ul>
       </header>
