--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
           <li>
             <span> 00 </span>
-            <span><a href="index.html" id="link">Home</a></span>
+            <span><a href="index.html" class="link">Home</a></span>
           </li>
           <li>
             <span> 01 </span>
