--- a/html/destination.html
+++ b/html/destination.html
@@ -35,7 +35,7 @@
           </li>
           <li>
             <span> 01 </span>
-            <span><a href="destination.html">Destination</a></span>
+            <span><a href="destination.html" class="link">Destination</a></span>
           </li>
           <li>
             <span> 02 </span>
