--- a/html/crew.html
+++ b/html/crew.html
@@ -47,7 +47,7 @@
           </li>
         </ul>
       </header>
-      <h4 class="head">02 Meet your crew</h4>
+      <h4 class="head"><span>02</span> Meet your crew</h4>
       <section>
         <div class="crew-text">
           <h2 class="role" id="role">Commander</h2>
