--- a/html/technology.html
+++ b/html/technology.html
@@ -47,6 +47,34 @@
           </li>
         </ul>
       </header>
+      <h3 class="head"><span>03</span> Space launch 101</h3>
+      <section class="technology">
+        <div class="tech-text">
+          <div class="text-num" id="select">
+            <div class="number" id="number1">1</div>
+            <div class="number" id="number2">2</div>
+            <div class="number" id="number3">3</div>
+          </div>
+          <div class="text-info">
+            <h4 class="about" id="about">The terminology...</h4>
+            <h1 class="name" id="name">Space capsule</h1>
+            <p class="info" id="info">
+              A space capsule is an often-crewed spacecraft that uses a
+              blunt-body reentry capsule to reenter the Earth's atmosphere
+              without wings. Our capsule is where you'll spend your time during
+              the flight. It includes a space gym, cinema, and plenty of other
+              activities to keep you entertained.
+            </p>
+          </div>
+        </div>
+        <div class="tech-img"></div>
+        <img
+          src="/assets/technology/image-launch-vehicle-portrait.jpg"
+          alt=""
+          class="images"
+          id="image"
+        />
+      </section>
     </div>
     <script src="/assets/js/tech.js"></script>
   </body>
