--- a/html/destination.html
+++ b/html/destination.html
@@ -17,7 +17,7 @@
     <div class="destination">
       <header>
         <div class="logo">
-          <a href="/space-tourism-website-main/index.html">
+          <a href="../index.html">
             <img src="/assets/shared/logo.svg" alt="" />
           </a>
           <span class="burger" id="burger"
@@ -30,20 +30,28 @@
             <img src="/assets/shared/icon-close.svg" alt="" />
           </li>
           <li>
-            <span> 00 </span>
-            <span><a href="../index.html" target="_self">Home</a></span>
+            <span
+              ><a href="../index.html" target="_self">
+                <span> 00 </span> Home</a
+              ></span
+            >
           </li>
           <li>
-            <span> 01 </span>
-            <span><a href="destination.html" class="link">Destination</a></span>
+            <span
+              ><a href="destination.html" class="link">
+                <span> 01 </span>Destination</a
+              ></span
+            >
           </li>
           <li>
-            <span> 02 </span>
-            <span><a href="crew.html">Crew</a></span>
+            <span
+              ><a href="crew.html"> <span> 02 </span> Crew</a></span
+            >
           </li>
           <li>
-            <span> 03 </span>
-            <span><a href="technology.html">Technology</a></span>
+            <span
+              ><a href="technology.html"> <span> 03 </span>Technology</a></span
+            >
           </li>
         </ul>
       </header>
