--- a/html/technology.html
+++ b/html/technology.html
@@ -17,7 +17,7 @@
     <div class="tech">
       <header>
         <div class="logo">
-          <a href="index.html">
+          <a href="../index.html">
             <img src="/assets/shared/logo.svg" alt="" />
           </a>
           <span class="burger" id="burger"
@@ -30,20 +30,30 @@
             <img src="/assets/shared/icon-close.svg" alt="" />
           </li>
           <li>
-            <span> 00 </span>
-            <span><a href="../index.html" target="_self">Home</a></span>
+            <span
+              ><a href="../index.html" target="_self">
+                <span> 00 </span> Home</a
+              ></span
+            >
           </li>
           <li>
-            <span> 01 </span>
-            <span><a href="destination.html">Destination</a></span>
+            <span
+              ><a href="destination.html"
+                ><span> 01 </span> Destination</a
+              ></span
+            >
           </li>
           <li>
-            <span> 02 </span>
-            <span><a href="crew.html">Crew</a></span>
+            <span
+              ><a href="crew.html"> <span> 02 </span> Crew</a></span
+            >
           </li>
           <li>
-            <span> 03 </span>
-            <span><a href="technology.html" class="link">Technology</a></span>
+            <span
+              ><a href="technology.html" class="link"
+                ><span> 03 </span> Technology</a
+              ></span
+            >
           </li>
         </ul>
       </header>
