--- a/index.html
+++ b/index.html
@@ -29,22 +29,32 @@
             <img src="/assets/shared/icon-close.svg" alt="" />
           </li>
           <li>
-            <span> 00 </span>
-            <span><a href="index.html" class="link">Home</a></span>
-          </li>
-          <li>
-            <span> 01 </span>
             <span
-              ><a href="html/destination.html" id="link">Destination</a></span
+              ><a href="index.html" class="link">
+                <span> 00 </span> Home
+              </a></span
             >
           </li>
           <li>
-            <span> 02 </span>
-            <span><a href="html/crew.html" id="link">Crew</a></span>
+            <span
+              ><a href="html/destination.html" id="link">
+                <span> 01 </span> Destination
+              </a></span
+            >
           </li>
           <li>
-            <span> 03 </span>
-            <span><a href="html/technology.html" id="link">Technology</a></span>
+            <span
+              ><a href="html/crew.html" id="link">
+                <span> 02 </span> Crew</a
+              ></span
+            >
+          </li>
+          <li>
+            <span
+              ><a href="html/technology.html" id="link">
+                <span> 03 </span> Technology</a
+              ></span
+            >
           </li>
         </ul>
       </header>
