--- a/html/crew.html
+++ b/html/crew.html
@@ -14,20 +14,20 @@
     <title>space tourism destination page</title>
   </head>
   <body>
-    <div class="crew">
+    <section class="crew">
       <header>
         <div class="logo">
           <a href="../index.html">
-            <img src="/assets/shared/logo.svg" alt="" />
+            <img src="/assets/shared/logo.svg" alt="logo" />
           </a>
           <span class="burger" id="burger"
-            ><img src="/assets/shared/icon-hamburger.svg" alt=""
+            ><img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger"
           /></span>
         </div>
         <div class="line"></div>
         <ul class="nav" id="menu">
           <li class="close" id="close">
-            <img src="/assets/shared/icon-close.svg" alt="" />
+            <img src="/assets/shared/icon-close.svg" alt="icon-close" />
           </li>
           <li>
             <span
@@ -58,7 +58,7 @@
         </ul>
       </header>
       <h4 class="head"><span>02</span> Meet your crew</h4>
-      <section>
+      <div class="section">
         <div class="crew-text">
           <h2 class="role" id="role">Commander</h2>
           <h1 class="name" id="name">Douglas Hurley</h1>
@@ -81,8 +81,8 @@
             id="image"
           />
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <script src="/assets/js/crew.js"></script>
   </body>
 </html>
