--- a/html/destination.html
+++ b/html/destination.html
@@ -14,20 +14,20 @@
     <title>space tourism destination page</title>
   </head>
   <body>
-    <div class="destination">
+    <section class="destination">
       <header>
         <div class="logo">
           <a href="../index.html">
-            <img src="/assets/shared/logo.svg" alt="" />
+            <img src="/assets/shared/logo.svg" alt="logo" />
           </a>
           <span class="burger" id="burger"
-            ><img src="/assets/shared/icon-hamburger.svg" alt=""
+            ><img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger"
           /></span>
         </div>
         <div class="line"></div>
         <ul class="nav" id="menu">
           <li class="close" id="close">
-            <img src="/assets/shared/icon-close.svg" alt="" />
+            <img src="/assets/shared/icon-close.svg" alt="icon-close" />
           </li>
           <li>
             <span
@@ -56,13 +56,13 @@
         </ul>
       </header>
       <h2 class="head"><span>01</span> Pick your destination</h2>
-      <section>
+      <div class="section">
         <div class="destination-img">
           <img
             src="/assets/destination/image-moon.webp"
             class="image"
             id="image"
-            alt=""
+            alt="image-moon"
           />
         </div>
         <div class="destination-text">
@@ -90,8 +90,8 @@
             </div>
           </aside>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <script src="/assets/js/destination.js"></script>
   </body>
 </html>
