--- a/html/technology.html
+++ b/html/technology.html
@@ -14,20 +14,20 @@
     <title>space tourism destination page</title>
   </head>
   <body>
-    <div class="tech">
+    <section class="tech">
       <header>
         <div class="logo">
           <a href="../index.html">
-            <img src="/assets/shared/logo.svg" alt="" />
+            <img src="/assets/shared/logo.svg" alt="logo" />
           </a>
           <span class="burger" id="burger"
-            ><img src="/assets/shared/icon-hamburger.svg" alt=""
+            ><img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger"
           /></span>
         </div>
         <div class="line"></div>
         <ul class="nav" id="menu">
           <li class="close" id="close">
-            <img src="/assets/shared/icon-close.svg" alt="" />
+            <img src="/assets/shared/icon-close.svg" alt="icon-close" />
           </li>
           <li>
             <span
@@ -58,7 +58,7 @@
         </ul>
       </header>
       <h3 class="head"><span>03</span> Space launch 101</h3>
-      <section class="technology">
+      <div class="technology section">
         <div class="tech-text">
           <div class="text-num" id="select">
             <div class="number" id="number1">1</div>
@@ -80,12 +80,12 @@
         <div class="tech-img"></div>
         <img
           src="/assets/technology/image-launch-vehicle-portrait.jpg"
-          alt=""
+          alt="image-launch-vehicle-portrait"
           class="images"
           id="image"
         />
-      </section>
-    </div>
+      </div>
+    </section>
     <script src="/assets/js/tech.js"></script>
   </body>
 </html>
