--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <title>Frontend Mentor | Space tourism website<</title>
   </head>
   <body>
-    <div class="home">
+    <section class="home">
       <header>
         <div class="logo">
           <a href="index.html">
-            <img src="/assets/shared/logo.svg" alt="" />
+            <img src="/assets/shared/logo.svg" alt="logo" />
           </a>
           <span class="burger" id="burger"
-            ><img src="/assets/shared/icon-hamburger.svg" alt=""
+            ><img src="/assets/shared/icon-hamburger.svg" alt="icon-hamburger"
           /></span>
         </div>
         <div class="line"></div>
         <ul class="nav" id="menu">
           <li class="close" id="close">
-            <img src="/assets/shared/icon-close.svg" alt="" />
+            <img src="/assets/shared/icon-close.svg" alt="close" />
           </li>
           <li>
             <span
@@ -58,7 +58,7 @@
           </li>
         </ul>
       </header>
-      <section>
+      <div class="section">
         <div class="home-text">
           <h2>So, you want to travel to</h2>
           <h1>Space</h1>
@@ -74,8 +74,8 @@
             <a href="/html/destination.html"> <h2>Explore</h2></a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    </section>
     <script src="/assets/js/app.js"></script>
   </body>
 </html>
