--- a/html/crew.html
+++ b/html/crew.html
@@ -6,8 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bellefair&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/css/crew.css" />
@@ -60,13 +68,16 @@
       <h4 class="head"><span>02</span> Meet your crew</h4>
       <div class="section">
         <div class="crew-text">
-          <h2 class="role" id="role">Commander</h2>
-          <h1 class="name" id="name">Douglas Hurley</h1>
-          <p class="info" id="info">
-            Douglas Gerald Hurley is an American engineer, former Marine Corps
-            pilot and former NASA astronaut. He launched into space for the
-            third time as commander of Crew Dragon Demo-2.
-          </p>
+          <div class="column">
+            <h2 class="role" id="role">Commander</h2>
+            <h1 class="name" id="name">Douglas Hurley</h1>
+            <p class="info" id="info">
+              Douglas Gerald Hurley is an American engineer, former Marine Corps
+              pilot and former NASA astronaut. He launched into space for the
+              third time as commander of Crew Dragon Demo-2.
+            </p>
+          </div>
+
           <div class="btns" id="btns">
             <div class="btn" id="btn1"></div>
             <div class="btn" id="btn2"></div>
